test/parser/if.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:8: error: expected expression
    if {}

    // CHECK: [[# @LINE + 1 ]]:10: error: expected 'if' body
    if 0 #{}

    if 0 {}
    // CHECK: [[# @LINE + 1 ]]:10: error: expected 'else' body
    else ({}

    if 0 {}
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    else if {}
    // CHECK: [[# @LINE + 1 ]]:5: error: expected expression
    else {}

    if 0 {}
    // CHECK: IfStmt
    // CHECK-NEXT:   IntLiteral: '0'
    // CHECK-NEXT:   Block

    if 0 {}
    else {}
    // CHECK: IfStmt
    // CHECK-NEXT:   IntLiteral: '0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block

    if 0 {}
    else if 1 {}
    else if 2 {}
    else {}
    // CHECK: IfStmt
    // CHECK-NEXT:   IntLiteral: '0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:   Block
    // CHECK-NEXT:     IfStmt
    // CHECK-NEXT:       IntLiteral: '1'
    // CHECK-NEXT:       Block
    // CHECK-NEXT:       Block
    // CHECK-NEXT:         IfStmt
    // CHECK-NEXT:           IntLiteral: '2'
    // CHECK-NEXT:           Block
    // CHECK-NEXT:           Block
}
